--- a/css/grid.css
+++ b/css/grid.css
@@ -1,8 +1,14 @@
+/* nav 1 */
 #social {
     display: flex;
     justify-content: space-between;
     background-color: black;
-    
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    padding-bottom: 5%;
+ 
 }
 
 #social .left ul,
@@ -16,13 +22,18 @@
 #social .left ul li,
 #social .right ul li {
     margin: 2px;
+    
 }
-/* 2do div */
 
+/* 2do div */
 #mainMenu {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 50px; /* Ajusta este valor según la altura de #social */
+    width: 100%;
+    z-index: 100;
 }
 
 #mainMenu div ul {
